--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,12 +1,15 @@
 {
   "item.tutorialmod.zircon": "Zircon",
   "item.tutorialmod.raw_zircon": "Raw Zircon",
+  "item.tutorialmod.raw_aranarium": "Raw Aranarium",
 
   "block.tutorialmod.zircon_block": "Block of Zircon",
   "block.tutorialmod.zircon_ore": "Zircon Ore",
   "block.tutorialmod.deepslate_zircon_ore": "Deepslate Zircon Ore",
   "block.tutorialmod.endstone_zircon_ore": "Endstone Zircon Ore",
   "block.tutorialmod.netherrack_zircon_ore": "Netherrack Zircon Ore",
+  "block.tutorialmod.aranarium_ore": "Aranarium Ore",
 
-  "itemGroup.tutorialtab": "Zircon Tutorial Tab"
+  "itemGroup.tutorialtab": "Zircon Tutorial Tab",
+  "itemGroup.aranariumtab": "Aranarium Tab"
 }
